tests/auto/client/shared/coreprotocol.cpp
@@ -50,6 +50,11 @@ void Surface::map()
     m_mapped = true;
 }
 
+void Surface::unmap()
+{
+    m_mapped = false;
+}
+
 void Surface::surface_destroy_resource(Resource *resource)
 {
     Q_UNUSED(resource);
@@ -73,8 +78,10 @@ void Surface::surface_attach(Resource *resource, wl_resource *buffer, int32_t x,
     Q_UNUSED(resource);
     if (m_wlshell) {
         m_buffer = buffer;
-        if (!buffer)
+        if (!buffer) {
             m_image = QImage();
+            unmap();
+        }
     } else {
         QPoint offset(x, y);
         if (resource->version() < 5)
@@ -155,8 +162,6 @@ void Surface::surface_offset(Resource *resource, int32_t x, int32_t y)
 bool WlCompositor::isClean() {
     for (auto *surface : std::as_const(m_surfaces)) {
         if (!CursorRole::fromSurface(surface)) {
-            if (m_compositor->m_type != CoreCompositor::CompositorType::Legacy)
-                return false;
             if (surface->isMapped())
                 return false;
         }
@@ -639,8 +644,10 @@ WlShellSurface::WlShellSurface(WlShell *wlShell, wl_client *client, int id, Surf
 
 WlShellSurface::~WlShellSurface()
 {
-    if (m_surface)
+    if (m_surface) {
+        m_surface->unmap();
         m_surface->m_wlShellSurface = nullptr;
+    }
 }
 
 void WlShellSurface::sendConfigure(uint32_t edges, int32_t width, int32_t height)
