tests/auto/client/shared/mockcompositor.cpp
@@ -40,7 +40,7 @@ DefaultCompositor::DefaultCompositor(CompositorType t, int socketFd)
 
         QObject::connect(get<WlCompositor>(), &WlCompositor::surfaceCreated, [this] (Surface *surface){
             QObject::connect(surface, &Surface::bufferCommitted, [this, surface] {
-                if (m_config.autoRelease) {
+                if (m_config.autoRelease && surface->m_committed.buffer) {
                     // Pretend we made a copy of the buffer and just release it immediately
                     surface->m_committed.buffer->send_release();
                 }
